--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,67 +17,52 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="116dp"
+            android:layout_marginTop="172dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:sv_centerCircleRadius="10dp"
             app:sv_indicator="KiteIndicator"
             app:sv_indicatorWidth="10dp"
-            app:sv_speedometerWidth="10dp"
             app:sv_speedTextSize="25dp"
-            app:sv_withTremble="false"/>
-
-        <com.github.anastr.speedviewlib.SpeedView
-            android:id="@+id/gaugeO3"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="116dp"
-            app:layout_constraintStart_toEndOf="@+id/gaugeCO"
-            app:layout_constraintTop_toTopOf="parent"
-            app:sv_centerCircleRadius="10dp"
-            app:sv_indicator="KiteIndicator"
-            app:sv_indicatorWidth="10dp"
             app:sv_speedometerWidth="10dp"
-            app:sv_speedTextSize="22dp"
-            app:sv_withTremble="false"/>
+            app:sv_withTremble="false" />
 
         <com.github.anastr.speedviewlib.SpeedView
             android:id="@+id/gaugePM25"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="44dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gaugeCO"
             app:sv_centerCircleRadius="10dp"
             app:sv_indicator="KiteIndicator"
             app:sv_indicatorWidth="10dp"
-            app:sv_speedometerWidth="10dp"
             app:sv_speedTextSize="25dp"
-            app:sv_withTremble="false"/>
+            app:sv_speedometerWidth="10dp"
+            app:sv_withTremble="false" />
 
         <com.github.anastr.speedviewlib.SpeedView
             android:id="@+id/gaugePM10"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="44dp"
             app:layout_constraintStart_toEndOf="@+id/gaugePM25"
             app:layout_constraintTop_toBottomOf="@+id/gaugeO3"
             app:sv_centerCircleRadius="10dp"
             app:sv_indicator="KiteIndicator"
             app:sv_indicatorWidth="10dp"
-            app:sv_speedometerWidth="10dp"
             app:sv_speedTextSize="25dp"
-            app:sv_withTremble="false"/>
+            app:sv_speedometerWidth="10dp"
+            app:sv_withTremble="false" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="23dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="120dp"
             android:text="一氧化碳 (ppm)"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +72,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="120dp"
             android:layout_marginEnd="45dp"
             android:text="臭氧 (ppb)"
             android:textSize="25sp"
@@ -99,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="272dp"
+            android:layout_marginTop="328dp"
             android:text="PM2.5 (µg/m³)"
             android:textSize="25sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -109,19 +94,34 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="272dp"
+            android:layout_marginTop="328dp"
             android:layout_marginEnd="20dp"
             android:text="PM10 (µg/m³)"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.github.anastr.speedviewlib.SpeedView
+            android:id="@+id/gaugeO3"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="172dp"
+            app:layout_constraintStart_toEndOf="@+id/gaugeCO"
+            app:layout_constraintTop_toTopOf="parent"
+            app:sv_centerCircleRadius="10dp"
+            app:sv_indicator="KiteIndicator"
+            app:sv_indicatorWidth="10dp"
+            app:sv_speedTextSize="22dp"
+            app:sv_speedometerWidth="10dp"
+            app:sv_withTremble="false" />
+
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="475dp"
+            android:layout_marginTop="64dp"
             android:text="空氣品質 :"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="475dp"
+            android:layout_marginTop="64dp"
             android:text="TextView"
             android:textAlignment="textStart"
             android:textSize="30sp"
@@ -145,20 +145,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="17dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="11dp"
             android:text="Button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/gaugePM25" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="10dp"
             android:text="Button"
             app:layout_constraintStart_toEndOf="@+id/button"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/gaugePM25" />
 
         <Button
             android:id="@+id/button3"
@@ -168,7 +168,7 @@
             android:layout_marginEnd="68dp"
             android:text="Button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/AQIGrade" />
+            app:layout_constraintTop_toBottomOf="@+id/gaugePM10" />
 
         <Button
             android:id="@+id/button4"
