調整折線圖顏色

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -75,12 +75,14 @@
                     android:id="@+id/lineChartCO"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1" />
 
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/lineChartO3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1" />
             </LinearLayout>
 
@@ -94,12 +96,14 @@
                     android:id="@+id/lineChartPM2_5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1" />
 
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/lineChartPM10"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:layout_weight="1" />
 
             </LinearLayout>
