--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="O3">#81BFDA</color>
     <color name="PM2_5">#A1D6CB</color>
     <color name="PM10">#A19AD3</color>
-    <color name="green">#00FF00</color>
-    <color name="orange">#FFB366</color>
-    <color name="red">#FF4D40</color>
+<!--    <color name="green">#98FB98</color>-->
+    <color name="green">#90EE90</color>
+    <color name="orange">#FF7F50</color>
+    <color name="red">#FF0000</color>
 </resources>
