wifi、藍芽的列表可以點擊、連接

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="PM10">#A19AD3</color>
 <!--    <color name="green">#98FB98</color>-->
     <color name="green">#90EE90</color>
-    <color name="orange">#FF7F50</color>
+    <color name="orange">#FF6347</color>
     <color name="red">#FF0000</color>
 </resources>
