--- a/app/src/main/res/layout/fragment_setup_bluetooth.xml
+++ b/app/src/main/res/layout/fragment_setup_bluetooth.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SetupFragment">
+    tools:context=".SetupBluetoothFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,29 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-            <Switch
-                android:id="@+id/switch_wifi"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:text="  Wi-Fi"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/tv_wifi_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:text="  已關閉"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_wifi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
 
             <Switch
                 android:id="@+id/switch_bluetooth"
@@ -62,17 +39,6 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
 
-            <Button
-                android:id="@+id/btn_SetupWiFi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-
-            <Button
-                android:id="@+id/btn_SetupBluetooth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
         </LinearLayout>
     </ScrollView>
 
