修改設定畫面

--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -60,19 +60,135 @@
                 android:id="@+id/recycler_bluetooth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:visibility="gone" >
 
-            <Button
-                android:id="@+id/btn_SetupWiFi"
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_SetupWiFi"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.95"
+                    android:text="Wi-Fi"
+                    android:textAlignment="textStart"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    app:backgroundTint="#FFFFFF"
+                    app:cornerRadius="0dp"
+                    app:icon="@drawable/ic_wifi"
+                    app:iconPadding="16dp"
+                    app:iconSize="36dp"
+                    app:iconTint="#000000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.05"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:paddingRight="16dp"
+                    android:text="已關閉"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btn_SetupBluetooth"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_SetupWiFi1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.95"
+                    android:text="Wi-Fi"
+                    android:textAlignment="textStart"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    app:backgroundTint="#FFFFFF"
+                    app:cornerRadius="0dp"
+                    app:icon="@drawable/ic_wifi"
+                    app:iconPadding="16dp"
+                    app:iconSize="36dp"
+                    app:iconTint="#000000" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.05"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:paddingRight="16dp"
+                    android:text="已關閉"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_SetupBluetooth"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.95"
+                    android:text="藍芽"
+                    android:textAlignment="textStart"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    app:backgroundTint="#FFFFFF"
+                    app:cornerRadius="0dp"
+                    app:icon="@drawable/ic_bluetooth"
+                    app:iconPadding="16dp"
+                    app:iconSize="36dp"
+                    app:iconTint="#000000" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.05"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:paddingRight="16dp"
+                    android:text="已關閉"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <!--            <Button-->
+<!--                android:id="@+id/btn_SetupWiFi"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/btn_style"-->
+<!--                android:backgroundTint="@null"-->
+<!--                android:text="Button"-->
+<!--                android:textColor="#FFFFFF" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_SetupBluetooth"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Button" />-->
         </LinearLayout>
     </ScrollView>
 
