藍芽可以正常連接esp32，wifi憑證可以正常發送，esp32有收到並回傳OK

--- a/app/src/main/res/layout/fragment_setup_bluetooth.xml
+++ b/app/src/main/res/layout/fragment_setup_bluetooth.xml
@@ -29,7 +29,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
-                android:text="  已關閉"
+                android:paddingLeft="8dp"
+                android:text="已關閉"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="14sp" />
 
