--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="green">#90EE90</color>
     <color name="orange">#FF6347</color>
     <color name="red">#FF0000</color>
+    <color name="purple_500">#9C27B0</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
