--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -98,7 +98,7 @@
                     android:id="@+id/lineChartCO"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginBottom="15dp"
                     android:layout_weight="1" />
 
@@ -106,7 +106,7 @@
                     android:id="@+id/lineChartO3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginRight="5dp"
                     android:layout_marginBottom="15dp"
                     android:layout_weight="1" />
             </LinearLayout>
@@ -145,7 +145,7 @@
                     android:id="@+id/lineChartPM2_5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_marginBottom="15dp"
                     android:layout_weight="1" />
 
@@ -153,7 +153,7 @@
                     android:id="@+id/lineChartPM10"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginRight="5dp"
                     android:layout_marginBottom="15dp"
                     android:layout_weight="1" />
 
